# adv_mla_lab_3

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: sgd_pipe.joblib
notebooks/: 1_baseline.ipynb  2_pipelines.ipynb
