[tool.poetry]
name = "adv-mla-lab-3"
version = "0.1.0"
description = "Model Serving Code-base"
authors = ["Benedict Brunker <benedictbrunker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "4.2.3"
pandas = "2.2.2"
scikit-learn = "1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
